# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/thermal_manager/thermalmgr.gni")
import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")

config("thermal_private_config") {
  include_dirs = [ "${thermal_manager_path}/services/zidl/include" ]
}

config("thermal_public_config") {
  include_dirs = [ "${thermal_manager_path}/frameworks/include" ]
}

js_declaration("thermal_js") {
  part_name = "thermal_manager_native"
  sources = [ "./@ohos.thermal.d.ts" ]
}

ohos_copy("power_declaration") {
  sources = [ "./@ohos.thermal.d.ts" ]
  outputs = [ target_out_dir + "/$target_name/" ]
  module_source_dir = target_out_dir + "/$target_name"
  module_install_name = ""
}

ohos_shared_library("thermal") {
  configs = [
    "${utils_path}:utils_config",
    ":thermal_private_config",
  ]

  public_configs = [ ":thermal_public_config" ]

  sources = [
    "${thermal_manager_path}/frameworks/napi/common/thermal_manager_native_event.cpp",
    "${thermal_manager_path}/frameworks/napi/common/thermal_napi_context.cpp",
    "${thermal_manager_path}/frameworks/napi/thermal/thermal_manager_napi.cpp",
  ]

  deps = [
    "${thermal_manager_path}/interfaces/innerkits:thermalsrv_client",
    "${thermal_manager_path}/services:thermalservice",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/ace/napi:ace_napi",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_runtime:app_manager",
    "ability_runtime:base",
    "ability_runtime:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:libeventhandler",
    "ces_standard:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  relative_install_dir = "module"
  part_name = "thermal_manager_native"
  subsystem_name = "powermgr"
}
