# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/thermal_manager/thermalmgr.gni")
import("//build/config/features.gni")
import("//build/test.gni")

module_output_path = "${thermalmgr_native_part_name}/thermal_native"

deps_ex = [
  "ability_base:base",
  "ability_base:want",
  "bundle_framework:appexecfwk_base",
  "eventhandler:libeventhandler",
  "ipc:ipc_core",
  "hiviewdfx_hilog_native:libhilog",
  "safwk:system_ability_fwk",
  "samgr:samgr_proxy",
  "appspawn:appspawn_socket_client",
  "c_utils:utils",
]

##############################fuzztest##########################################
ohos_fuzztest("ThermalFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/powermgr/thermal_manager/test/fuzztest/thermal_fuzzer"

  include_dirs = [
    "./",
    "${thermal_innerkits}/native/include",
    "${utils_path}/native/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "./thermal_fuzzer_test.cpp" ]
  deps = [
    "${thermal_innerkits}:thermalsrv_client",
    "${thermal_service_zidl}:thermalmgr_proxy",
    "${thermal_service_zidl}:thermalmgr_stub",
  ]
  external_deps = deps_ex
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":ThermalFuzzTest",
  ]
}
###############################################################################
