# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("../../../thermalmgr.gni")

module_output_path = "${thermalmgr_native_part_name}/thermal_native"

deps_ex = [
  "ipc:ipc_core",
  "hilog:libhilog",
  "safwk:system_ability_fwk",
  "samgr:samgr_proxy",
  "c_utils:utils",
  "hdf_core:libhdi",
  "hdf_core:libpub_utils",
  "drivers_interface_thermal:libthermal_proxy_1.1",
]

##############################fuzztest##########################################
ohos_fuzztest("ThermalFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "${thermal_manager_path}/test/fuzztest/thermal_fuzzer"

  include_dirs = [
    "./",
    "${thermal_inner_api}/native/include",
    "${utils_path}/native/include",
  ]

  configs = [ "${utils_path}:coverage_flags" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "./thermal_fuzzer_test.cpp" ]
  deps = [
    "${thermal_inner_api}:thermalsrv_client",
    "${thermal_manager_path}/services:thermalservice",
    "${thermal_service_zidl}:thermalmgr_proxy",
    "${thermal_service_zidl}:thermalmgr_stub",
    "${utils_path}:thermal_utils",
    "//third_party/libxml2:xml2",
  ]
  external_deps = deps_ex
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":ThermalFuzzTest",
  ]
}
###############################################################################
